--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
+.mannequinImg {
+  height: 400px;
+  object-fit: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  max-width: 400px;
+  background-position-x: 47%;
+  background-image: url('./img/mannequin_done3.png');
+}
+
+#controller{
+  width: 500px;
+  left: -70px;
+}
+
+.wearLi{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.wearImg{
+  width: 100%;
 }
